--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,12 @@ section {
 .hero {
     color: rgb(1, 1, 1, 0.8);
     padding: 80px 10%;
-    background-image: url('smartdesk.png');
+    background: linear-gradient(rgba(15,23,42,0.65), rgba(15,23,42,0.65)),
+    url('smartdesk.png') center / cover no-repeat;
+    height: 69vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     background-size: fill;
     background-size: cover;
     background-position: center;
@@ -79,6 +84,7 @@ section {
 
 .hero-content {
     max-width: 500px;
+    max-height: 500px;
 }
 
 .hero-content h1 {
@@ -160,7 +166,7 @@ section {
 
 .feature-card {
     background-color: #1f2937;
-    padding: 40px 25px;
+    padding: 40px 10px;
     border-radius: 12px;
     transition: 0.3s ease;
 }
@@ -184,8 +190,7 @@ section {
     font-size: 14px;
 }
 .feature-card .icon img {
-    width: 40px;
-    height: 40px;
+   
     object-fit: contain;
 }
 .testimonials {
@@ -271,7 +276,7 @@ section {
     color: #94a3b8;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 768px) {
 
     .hero {
         flex-direction: column;
@@ -289,6 +294,33 @@ section {
     }
     .testimonials-grid {
     grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 600px) {
+    h1 {
+        font-size: 2rem;
+    }
+
+    h2 {
+        font-size: 1.8rem;
+    }
+
+    p {
+        font-size: 0.9rem;
+    }
+}
+
+@media (max-width: 600px) {
+    header, .hero, .features, .testimonials, .final-cta {
+        padding: 20px 5%;
+    }
+    section {
+        padding: 30px 5%;
+    }
+
+    .footer {
+        padding: 25px 5%;
     }
 }
 
